kubernetes/todo-service.yaml
# Service to expose frontend
apiVersion: v1
kind: Service
metadata:
  name: mytodos
  labels:
    app: mytodos
    tier: frontend
spec:
  ports:
  - protocol: TCP
    port: 8080
  selector:
    app: mytodos
    tier: frontend

# Ingress to redirect app and use SSL
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mytodos-ingress
  annotations:
    ingress.bluemix.net/rewrite-path: "serviceName=mytodos rewrite=/"
    # Force the use of https if the request is http
    ingress.bluemix.net/redirect-to-https: "True"
    # Activate App ID for Authentication
    # Requires the existence of an App Id service bound to the cluster
    # ingress.bluemix.net/appid-auth: "bindSecret=binding-app-id-20180705 namespace=default requestType=web serviceName=mytodos"
spec:
  tls:
  - hosts:
    - iksdemocluster.us-south.containers.appdomain.cloud
    secretName: iksdemocluster
  rules:
  - host: iksdemocluster.us-south.containers.appdomain.cloud
    http:
      paths:
      - path: /todo/
        backend:
          serviceName: mytodos
          servicePort: 8080
